<resources>
    <string name="app_name">Testing App</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_sign_in">Don\'t have an Account ?</string>
    <string name="signIn">Sign In</string>
    <string name="already_have_an_account_login">Already Have an Account ?</string>
    <string name="name">Name</string>
    <string name="get_image">Get Image</string>
    <string name="upload_image_firebase">Upload Image Firebase</string>
    <string name="hello_user">Hello User!</string>
    <string name="logout">Logout</string>
</resources>